squash-rebase from 6e445f9e0af9f1c65b0d5d231bf90d5c306b35fe [ADDED] Page::Home::NewsSection [ADDED] document::page::home::news [ADDED] deps: markdown-it-checkbox [FIXED] document::page::home::news: content [FIXED] style::markdown: about checkbox

--- a/src/css/markdown.scss
+++ b/src/css/markdown.scss
@@ -263,6 +263,13 @@ $link-hover: #e74c3c;
 		display: inline-block;
 	}
 
+	input[type='checkbox'] {
+		margin-right: 0.5em;
+		position: relative;
+		top: 0.2em;
+		pointer-events: none;
+	}
+
 	// 任务列表
 	.task-list-item {
 		list-style-type: none;
